kubernetes/cilium-config/argocd/argo-gateway.yml
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: Gateway
metadata:
  name: argocd
  namespace: argocd
spec:
  gatewayClassName: cilium
  listeners:
    - hostname: argo.reprogle.org
      name: argocd-listener
      port: 443
      protocol: HTTPS
      tls:
        certificateRefs:
          - kind: Secret
            name: wildcard-cert
            namespace: argocd
      allowedRoutes:
        namespaces:
          from: All
