kubernetes/cilium-config/argocd/argo-httproute.yml
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: argocd-httproute
  namespace: argocd
spec:
  hostnames:
    - argo.reprogle.org
  parentRefs:
    - name: argocd-gateway
  rules:
    - backendRefs:
        - name: argocd-server
          port: 80
      matches:
        - path:
            type: PathPrefix
            value: /
